[gd_scene load_steps=3 format=3 uid="uid://c4kqg4ltfjf0a"]

[ext_resource type="Script" uid="uid://c1hsoor2ambqy" path="res://Factions/Knights/Troops/Dead/boss_dead.gd" id="1_smei8"]
[ext_resource type="Texture2D" uid="uid://cfxjbcvu0ivhq" path="res://Factions/Knights/Troops/Dead/Dead.png" id="2_sh5c3"]

[node name="Boss_Dead" type="CharacterBody2D"]
script = ExtResource("1_smei8")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("2_sh5c3")

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="attack_area" type="Area2D" parent="."]

[node name="attack_timer" type="Timer" parent="."]
